projects/phase2-orchestration/service-mesh-intro/manifests/traffic-management/virtual-service-ratings-test-delay.yaml
# 故障注入 - 延迟
# 为 jason 用户注入 7 秒延迟，测试超时处理

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ratings
spec:
  hosts:
  - ratings
  http:
  - match:
    - headers:
        end-user:
          exact: jason
    fault:
      delay:
        percentage:
          value: 100.0
        fixedDelay: 7s
    route:
    - destination:
        host: ratings
        subset: v1
  - route:
    - destination:
        host: ratings
        subset: v1
