projects/phase2-orchestration/service-mesh-intro/manifests/traffic-management/virtual-service-reviews-50-v3.yaml
# 权重路由规则
# 50% 流量到 v1，50% 流量到 v3（红色星级）

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
  - reviews
  http:
  - route:
    - destination:
        host: reviews
        subset: v1
      weight: 50
    - destination:
        host: reviews
        subset: v3
      weight: 50
